finishing front page of plan's section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,10 @@ $color-white: #fff;
 $color-grey: #525252;
 $color-black: #000;
 
+$color-green: green;
+$color-red: red;
+$color-blue: blue;
+
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #d8d7d7;
