--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
-  transition: all .2s; }
+  transition: all .4s; }
   .heading-secondary:hover {
     transform: scale(1.3);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -243,8 +243,7 @@ body {
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
     background-color: #f7f7f7; }
     .card__side--back {
-      transform: rotateY(180deg);
-      background-image: linear-gradient(to right bottom, rgba(82, 82, 82, 0.5), rgba(0, 0, 255, 0.5)); }
+      transform: rotateY(180deg); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -276,6 +275,19 @@ body {
     background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), green); }
   .card__heading-span--3 {
     background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), red); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 2rem;
+        padding: 1rem;
+        font-weight: 300; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #d8d7d7; }
 
 .header {
   height: 95vh;
