--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -45,18 +45,18 @@
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
         &--1 {
-            background-image: linear-gradient(to right bottom, $color-black, blue),
+            background-image: linear-gradient(to right bottom, $color-black, $color-blue),
             url(../img/easy-plan.jpg);
         }
 
         &--2 {
-            background-image: linear-gradient(to right bottom, $color-black, green),
+            background-image: linear-gradient(to right bottom, $color-black, $color-green),
             url(../img/mid-plan.jpg);
         }
 
         &--3 {
             background-image: 
-            linear-gradient(to right bottom, $color-black, red),
+            linear-gradient(to right bottom, $color-black, $color-red),
             url(../img/hard-plan.jpg);
         }
     }
@@ -75,15 +75,37 @@
     &__heading-span {
 
         &--1{
-            background-image: linear-gradient(to right bottom, rgba($color-black, .2), rgba(blue, 1));
+            background-image: linear-gradient(to right bottom, rgba($color-black, .2), rgba($color-blue, 1));
         }
 
         &--2 {
-            background-image: linear-gradient(to right bottom, rgba($color-black, .2), rgba(green, 1));
+            background-image: linear-gradient(to right bottom, rgba($color-black, .2), rgba($color-green, 1));
         }
 
         &--3 {
-            background-image: linear-gradient(to right bottom, rgba($color-black, .2), rgba(red, 1));
+            background-image: linear-gradient(to right bottom, rgba($color-black, .2), rgba($color-red, 1));
         }
+    }
+
+    &__details {
+        padding: 3rem;
+        ul {
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+
+            li {
+                text-align: center;
+                font-size: 2rem;
+                padding: 1rem;
+                font-weight: 300;
+
+                &:not(:last-child) {
+                    border-bottom: 1px solid $color-grey-light-2;
+                }
+            }
+
+        }
+
     }
 }
