--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,12 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.-u-margin-top-big {
+  margin-top: 8rem; }
+
+.-u-margin-top-huge {
+  margin-top: 10rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -119,7 +125,7 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 28rem 0 50rem 0;
+  padding: 28rem 0 15rem 0;
   margin-top: -15rem; }
 
 .btn:link, .btn:visited {
@@ -147,6 +153,12 @@ body {
   color: #fff;
   background-color: none; }
   .btn--white::after {
+    background-color: rgba(0, 0, 0, 0.1); }
+
+.btn--grey {
+  background-color: #d8d7d7;
+  color: #fff; }
+  .btn--grey::after {
     background-color: rgba(0, 0, 0, 0.1); }
 
 .btn::after {
@@ -243,7 +255,8 @@ body {
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
     background-color: #f7f7f7; }
     .card__side--back {
-      transform: rotateY(180deg); }
+      transform: rotateY(180deg);
+      background-color: #adaaaa; }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -285,9 +298,25 @@ body {
         text-align: center;
         font-size: 2rem;
         padding: 1rem;
-        font-weight: 300; }
+        font-weight: 400; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #d8d7d7; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 3rem; }
+  .card__price-only {
+    font-size: 2rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .header {
   height: 95vh;
