--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -22,6 +22,7 @@
 
         &--back {
             transform: rotateY(180deg);
+            background-color: $color-grey-light-3;
             
         }
 
@@ -98,7 +99,7 @@
                 text-align: center;
                 font-size: 2rem;
                 padding: 1rem;
-                font-weight: 300;
+                font-weight: 400;
 
                 &:not(:last-child) {
                     border-bottom: 1px solid $color-grey-light-2;
@@ -107,5 +108,30 @@
 
         }
 
+    }
+
+    // FRONT SIDE STYLING
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 3rem;
+    }
+
+    &__price-only {
+        font-size: 2rem;
+        text-transform: uppercase;
+    }
+
+    &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
     }
 }
