--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -50,7 +50,7 @@ body {
     }
 }
 
-.heading-tertianary {
+.heading-tertiary {
     font-size: $default-font-size;
     font-weight: 700;
     text-transform: uppercase;
