adding form and footer

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,11 +8,16 @@ $color-green: green;
 $color-red: red;
 $color-blue: blue;
 
+$color-valid-input: #55C57a;
+$color-invalid-input: #ff7730;
+
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #d8d7d7;
 $color-grey-light-3: #adaaaa;
+$color-grey-dark-2: #333;
 
+$color-grey-dark: #999; 
 // GRID 
 
 $grid-width: 114rem;
