--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -21,7 +22,9 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-.1rem);
         box-shadow: 0 .5rem 1rem rgba($color-black, 0.5);
     }
@@ -36,7 +39,7 @@
     }
 
     &--grey {
-        background-color: $color-grey-light-2;
+        background-color: $color-grey-light-3;
         color: $color-white;
 
             &::after {
