--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -33,3 +33,28 @@
     padding: 15rem 0;
     position: relative;
 }
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $color-white, $color-grey-light-3);
+}
+
+.book {
+    background-image: linear-gradient(105deg,
+        rgba($color-white, .9)0%,
+        rgba($color-white, .9) 50%,
+        transparent 50%),
+        url(../img/features-img.jpg);
+    background-size: cover;
+    border-radius: 3px;
+    background-position: center;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+    height: 50rem;
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
+    }
+
+}
